fixed folder typo

--- a/content/index.textile
+++ b/content/index.textile
@@ -52,7 +52,7 @@ h3. <%= link_to lab.title, lab  %>
 
 h2. Exam Reviews
 
-<% exam_reviews = @pages.find(:all, :in_directory => "lab_assignments").reject {|file| file.filename =~ /^\./} %>
+<% exam_reviews = @pages.find(:all, :in_directory => "exam_review").reject {|file| file.filename =~ /^\./} %>
 <% if exam_reviews %>
 <% exam_reviews.each do |exam_review| %>
 h3. <%= link_to exam_review.filename, exam_review %>
